--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -770,6 +770,8 @@ en:
       bad_barcode_char: Barcode data content unsupported character
       expired: The tour has expired
       enable_store_stops: Intermediate stops must be enabled
+    zonings:
+      geometry_error: The geometry is invalid
   import:
     csv:
       line: 'Line %{s}'
