--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2108,6 +2108,16 @@ en:
           no_solution: No solution found for your problem
           error: Compute fail.
           retry_canceling: 'Transmission in progress, try again later'
+          solvers: Used solvers
+          skipped_services: Skipped solvers
+          skipped_reasons_title: Unsupported constraints
+          skipped_reasons:
+            assert_no_first_solution_strategy: First solution strategy
+            assert_no_free_approach_or_return: Free approach or return
+            assert_no_relations_except_simple_shipments: Complex relations
+            assert_vehicles_start_or_end: Maximum distance or duration
+            assert_vehicles_no_duration_limit: Work duration
+            assert_vehicles_start_or_end: Missing start or end depot
         zoning:
           title: Sectorisation
           in_progress: 'Please wait, applying new sectorisation'
