--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2115,6 +2115,8 @@ en:
             assert_no_first_solution_strategy: First solution strategy
             assert_no_free_approach_or_return: Free approach or return
             assert_no_relations_except_simple_shipments: Complex relations
+            assert_no_rest: Rest
+            assert_services_no_setup_duration: Destination duration
             assert_vehicles_start_or_end: Maximum distance or duration
             assert_vehicles_no_duration_limit: Work duration
             assert_vehicles_start_or_end: Missing start or end depot
