--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -2207,13 +2207,13 @@ fr:
           error: Impossible d'effectuer le calcul.
           retry_canceling: 'Transmission en cours, réessayez ultérieurement'
           solvers: Solveurs utilisés
-          skipped_services: Solveurs ignorés
-          skipped_reasons_title: Contraintes non supportées
+          skipped_services: Solveurs ignorés et contraintes non supportées
           skipped_reasons:
             assert_no_first_solution_strategy: Stratégie de première solution
             assert_no_free_approach_or_return: Approche et retour libre
             assert_no_relations_except_simple_shipments: Relations complexes
             assert_no_rest: Pause
+            assert_no_quantity_pickup_and_delivery: Quantité de collecte et de livraison en simultanée
             assert_services_no_setup_duration: Durée de destination
             assert_vehicles_start_or_end: Distance ou durée maximale de trajet
             assert_vehicles_no_duration_limit: Durée de travail
