--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -2215,6 +2215,7 @@ fr:
             assert_no_free_approach_or_return: Approche et retour libre
             assert_no_relations_except_simple_shipments: Relations complexes
             assert_no_rest: Pause
+            assert_no_ride_constraint: Durée et distance de trajet maximales
             assert_no_quantity_pickup_and_delivery: Quantité de collecte et de livraison en simultanée
             assert_services_no_setup_duration: Durée de destination
             assert_vehicles_start_or_end: Distance ou durée maximale de trajet
