--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -767,6 +767,7 @@ en:
         Impossible to execute this operation for the moment, a background task
         (optimization) is currently running
       transmission_in_progress: Optimization is being transmitted
+      router: 'Route calculation error: %{error}'
     routes:
       bad_barcode_char: Barcode data content unsupported character
       expired: The tour has expired
